# slogic

./: .gitignore  .travis.yml  LICENSE  README.md  slogic.cabal  smtlib.cabal
src/: Main.hs
src/SLogic/: Decode.hs  Logic.hs  Lp.hs  Result.hs  Smt.hs  Solver.hs  SolverState.hs
src/SLogic/Data/: Decode.hs  Result.hs  Solver.hs
src/SLogic/Logic/: Core.hs  Formula.hs  Int.hs  IntFormula.hs  Logic.hs  Matrix.hs
src/SLogic/Lp/: Solver.hs
src/SLogic/Smt/: Core.hs  Int.hs  SmtM.hs  Solver.hs  State.hs
src/SmtLib/: PP.hs  SMT.hs  Solver.hs
src/SmtLib/Logic/: Core.hs  Data.hs  Int.hs  QF_NIA.hs
src/SmtLib/Solver/: MiniSmt.hs  Z3.hs
