name:          slogic
version:       0.0
stability:     experimental
author:        Georg Moser, Michael Schaper
maintainer:    Michael Schaper <michael.schaper@uibk.ac.at>
license:       BSD3
license-file:  LICENSE
synopsis:      SMT-solver interface
description:
  A s(imple)logic library that provides an interface to SMT-solvers supporting QF_NIA.
cabal-version: >=1.8
build-type:    Simple

source-repository head
  type:     git
  location: git://github.com/ComputationWithBoundedResources/slogic

library
  exposed-modules:
    SLogic.Decode
    SLogic.Result
    SLogic.Logic
    SLogic.Logic.Core 
    SLogic.Logic.Int 
    SLogic.Smt
    SLogic.Smt.Solver
    --SLogic.Lp
    --SLogic.Lp.Solver
    SLogic.SolverState
    SLogic.Solver
  hs-source-dirs:
    src

  build-depends:       
    ansi-wl-pprint >= 0.6 && < 0.7,
    base           == 4.*,
    bytestring     == 0.10.*,
    containers     >= 0.5 && < 0.6,
    mtl            >= 2.1 && < 2.3,
    process        == 1.2.*,
    temporary      == 1.2.*,
    uniplate       == 1.6.*

  ghc-options:
    -j -Wall -funbox-strict-fields -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

  extensions:
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses

