name:          slogic
version:       0.3
stability:     experimental
author:        Michael Schaper
maintainer:    Michael Schaper <michael.schaper@student.uibk.ac.at>
license:       BSD3
license-file:  LICENSE
category:      Logic
synopsis:      SMT-solver interface
description:
  A s(imple)logic library that provides an interface to SMT-solvers supporting QF_NIA.
cabal-version: >=1.8
build-type:    Simple

source-repository head
  type:     git
  location: git://github.com/ComputationWithBoundedResources/slogic

library
  exposed-modules:
    SLogic.Data.Decode
    SLogic.Data.Result
    SLogic.Data.Solver
    SLogic.Logic.Formula
    SLogic.Logic.Logic
    SLogic.Logic.Matrix
    SLogic.Smt
    SLogic.Smt.Solver
    SLogic.Smt.State
  hs-source-dirs:
    src

  build-depends:
    base           >= 4.7 && < 5 ,
    ansi-wl-pprint,
    bytestring,
    containers,
    unordered-containers,
    mtl,
    process,
    temporary,
    vector

  ghc-options:
    -Wall -funbox-strict-fields -threaded

  extensions:
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses
