name:          smtlib
version:       0.0
stability:     experimental
author:        Michael Schaper <michael.schaper@uibk.ac.at>
maintainer:    Michael Schaper <michael.schaper@uibk.ac.at>
license:       LGPL
license-file:  COPYING.LESSER
synopsis:      smt interface
description:
  smt (solver) interface
  
cabal-version:       >=1.8
build-type:          Simple

executable smt
  main-is:             
    Main.hs

  hs-source-dirs:
    src

  build-depends:       
    base == 4.*,
    smtLib >= 1.0.6,
    containers >= 0.5,
    mtl >= 2.1,
    process >= 1.1,
    pretty >= 1.1

  ghc-options:
    -O2 -funbox-strict-fields -threaded
    
library
  exposed-modules:
    SmtLib.SMT
    SmtLib.PP
    SmtLib.Solver.MiniSmt 
    SmtLib.Logic.Core 
    SmtLib.Logic.Int 
    SmtLib.Logic.Data
    SmtLib.Logic.QF_NIA

  hs-source-dirs:
    src

  build-depends:       
    base == 4.*,
    smtLib >= 1.0.6,
    containers >= 0.5,
    mtl >= 2.1,
    process >= 1.1,
    pretty >= 1.1

  ghc-options:
    -O2 -funbox-strict-fields -threaded


