name:          smtlib
version:       0.0
stability:     experimental
author:        Michael Schaper <michael.schaper@uibk.ac.at>
maintainer:    Michael Schaper <michael.schaper@uibk.ac.at>
license:       LGPL
license-file:  COPYING.LESSER
synopsis:      smt interface
description:
  smt (solver) interface
  
cabal-version:       >=1.8
build-type:          Simple

executable smt
  main-is:
    Main.hs

  hs-source-dirs:
    src

  build-depends:       
    base       == 4.*,
    containers >= 0.5,
    mtl        == 2.1.*, 
    pretty     >= 1.1,
    process    >= 1.1,
    smtLib     >= 1.0.6

  ghc-options:
    -O -funbox-strict-fields -threaded
    
library
  exposed-modules:
    SmtLib.Logic.Core 
    SmtLib.Logic.Data
    SmtLib.Logic.Int 
    SmtLib.Logic.QF_NIA
    SmtLib.PP
    SmtLib.SMT
    SmtLib.Solver

  hs-source-dirs:
    src

  build-depends:       
    base       == 4.*,
    containers >= 0.5,
    mtl        >= 2.1,
    pretty     >= 1.1,
    process    >= 1.1,
    smtLib     >= 1.0.6

  ghc-options:
    -O -funbox-strict-fields -threaded


